assets/css/buddypress.css
/* ... */
@media screen and (max-width: 782px) {
    #buddypress #item-header-cover-image #item-header-avatar img.avatar {
        float: none;
        margin: auto;
        margin-bottom: 15px;
    }
    #buddypress div#item-header #item-header-cover-image #item-header-content {
        margin-left: 0;
        padding: 0;
    }
    .single-headers h2 {
        text-align: center;
    }
    .single-headers ul li {
        float: none;
    }
}

@media screen and (min-width: 46.8em) and (max-width: 782px) {
    .single-headers a.button,
    .single-headers div.generic-button,
    .single-headers li.generic-button {
        float: none;
    }
}

@media screen and (min-width: 46.8em) {
    .buddypress-wrap .main-navs:not(.dir-navs) li.current a,
    .buddypress-wrap .main-navs:not(.dir-navs) li.selected a {
        background: transparent;
    }
    .bp-single-vert-nav .bp-wrap:not(.bp-fullwidth-wrap) {
        display: flex;
        flex-flow: row wrap;
        background: #fff;
        border: 1px solid var(--global-border-color);
        box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
        padding: 0;
        border-radius: 8px!important;
    }
    nav#object-nav.vertical {
        width: 100%;
        -webkit-box-flex: 0;
        -ms-flex: 0 0 230px;
        flex: 0 0 230px;
        float: left;
        margin: 0;
        min-height: 50vh;
        padding: 0;
        background: #fdfdfd;
        border-radius: 8px 0 0 8px;
        border: 0;
        border-right: 1px solid var(--global-border-color);
        padding: 20px 0;
    }
    .bp-single-vert-nav .bp-navs.vertical ul {
        border-right: 0;
        border-bottom: 0;
        float: none;
        margin-right: 0;
        width: auto;
    }
    #buddypress.buddypress-wrap #item-body:not(#group-create-body) {
        padding: 15px;
    }
    .bp-single-vert-nav .item-body:not(#group-create-body) {
        padding: 15px;
        flex: 1;
        min-width: 1px;
        margin: 0;
        border-left: 0;
        background: transparent;
    }
    nav#object-nav.vertical a {
        border: 0;
        display: flex;
        align-items: center;
        justify-content: space-between;
        margin-bottom: 1px;
        padding: 10px 15px;
    }
    .bp-single-vert-nav .bp-navs.vertical li:focus,
    .bp-single-vert-nav .bp-navs.vertical li:hover {
        background: transparent;
    }
    nav#object-nav.vertical .selected>a {
        background: rgba(77, 92, 109, .1);
        color: var(--color-link-active);
    }
    nav#object-nav.vertical a:hover {
        background: rgba(77, 92, 109, .1);
        color: var(--color-link-active);
    }
    .bp-single-vert-nav .item-body:not(#group-create-body) #subnav:not(.tabbed-links) {
        margin: 0;
        margin-bottom: 15px;
    }
    .bp-single-vert-nav .item-body:not(#group-create-body) #subnav:not(.tabbed-links) {
        background: transparent;
    }
    .bp-single-vert-nav .item-body:not(#group-create-body) #subnav:not(.tabbed-links) li.current a {
        color: var(--color-link-active);
        text-decoration: none;
    }
    .bp-single-vert-nav .item-body:not(#group-create-body) #subnav:not(.tabbed-links) li {
        font-size: inherit;
    }
    .bp-single-vert-nav .item-body:not(#group-create-body) #subnav:not(.tabbed-links) li a {
        font-size: inherit;
        border-right: 0;
        padding: .5em calc(.5em + 2px);
    }
}

@media screen and (max-width: 46.8em) {
    .buddypress-wrap .single-screen-navs {
        position: relative;
        margin: 15px 0;
        padding: 0;
        background: #fff;
        border: 1px solid var(--global-border-color);
        border-radius: 8px!important;
        box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
    }
    .bp-navs ul li a,
    .bp-navs ul li span {
        padding: 10px;
    }
    .buddypress-wrap .item-body {
        margin: 20px 0;
        position: relative;
        padding: 1em;
        border: 1px solid var(--global-border-color);
        -webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
        box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .1);
        border-radius: 8px !important;
        background: #fff;
    }
    #buddypress.buddypress-wrap #item-body {
        padding: 1em;
    }
    .buddypress-wrap .bp-subnavs ul li {
        float: left;
    }
    .buddypress-wrap:not(.bp-single-vert-nav) .bp-navs li {
        background: transparent;
    }
    .media .media_search.media_search {
        margin-top: 15px;
    }
}

.buddypress-wrap button[data-bp-close]:hover {
    border: 0;
}

#item-header-content img.bpsts-name-icon {
    display: inline;
}

.bpsts-icon-dialog-title .bpsts-icon-div img {
    margin: auto;
}

.buddypress.settings .profile-settings.bp-tables-user select {
    width: auto;
}


/*--------------------------------------------------------------
# Group Single
--------------------------------------------------------------*/

.single-headers #item-header-avatar a img {
    width: 150px;
    height: 150px;
}

body.single-item.groups #buddypress div#item-header #item-header-cover-image #item-header-content,
body.single-item.groups #buddypress div#item-header #item-header-cover-image #item-actions {
    margin-top: 0;
    margin-left: 152px;
    clear: none;
    max-width: 100%;
}

body.single-item.groups #buddypress div#item-header #item-header-cover-image #item-actions {
    padding-top: 0;
    margin-bottom: 0;
}

@media screen and (min-width: 782px) {
    body.single-item.groups #buddypress div#item-header #item-header-cover-image {
        display: flex;
    }
    body.single-item.groups #buddypress div#item-header #item-header-cover-image #item-header-content {
        float: left;
        margin-left: 0;
    }
    body.single-item.groups #buddypress div#item-header #item-header-cover-image #item-actions {
        float: right;
        margin-left: auto;
    }
}

.groups-header .moderators-lists {
    margin-bottom: 0;
}

.groups-header div#item-header-content {
    padding-top: 0;
}
/* ... */

